--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,7 +1,8 @@
 ---
 layout: "base.html"
-description: "Discover Halford Bookkeeping’s trusted accounting services, including bookkeeping, payroll, QuickBooks setup, and financial cleanup for businesses across the Midwest."
-metaTitle: "About Halford Bookkeeping"
+description: "Learn about More Power Electric’s commitment to reliable electrical solutions, from residential wiring to
+commercial installations, serving customers across the Midwest with skill and integrity."
+metaTitle: "About More Power Electric"
 tagTitle: "About"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/about.css"
@@ -17,8 +18,7 @@ eleventyNavigation:
 
 <section id="int-hero">
   <h1 id="home-h">About Us</h1>
-  {% image './src/images/landing.png', 'Halford Bookkeeping office', '',
-  'lazy', '(max-width: 850px) 850px, 1920px'%}
+  {% image './src/images/landing.png', 'More Power Electric office', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
@@ -29,46 +29,34 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/about_img_0.png', 'Halford Bookkeeping team',
-      'cs-picture cs-picture1', 'lazy'%} {% image
-      './src/images/about_img_1.png', 'accounting workspace', 'cs-picture
-      cs-picture2', 'lazy'%}
+      {% image './src/images/about_img_0.png', 'More Power Electric team', 'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/about_img_1.png', 'electrical work in progress', 'cs-picture cs-picture2', 'lazy'%}
     </div>
     <!-- Right Content Section-->
     <div class="cs-right">
       <span class="cs-topper">About Us</span>
-      <h2 class="cs-title">About Halford Bookkeeping</h2>
+      <h2 class="cs-title">About More Power Electric</h2>
       <p class="cs-text">
-        Halford Bookkeeping is a trusted, family-run firm dedicated to accurate
-        financial management and personalized service. We specialize in
-        bookkeeping, QuickBooks setup, payroll processing, and financial cleanup
-        for small businesses across the Midwest.
+        More Power Electric is a trusted, family-owned company dedicated to delivering safe, efficient, and dependable
+        electrical services. We handle residential wiring, commercial installations, system upgrades, and electrical
+        troubleshooting across the Midwest.
       </p>
       <p class="cs-text">
-        We simplify complex accounting tasks, ensuring businesses stay
-        compliant, organized, and ready for growth. By working directly with
-        each client, we deliver accurate records, timely reporting, and tailored
-        solutions that keep finances running smoothly.
+        We take the complexity out of electrical projects, ensuring every job meets code, operates flawlessly, and is
+        built to last. By working directly with each client, we provide timely service, quality workmanship, and
+        customized solutions for every need.
       </p>
 
       <div class="cs-flex-group">
         <p class="cs-flex-p">
-          I’m [Owner Name], founder of Halford Bookkeeping. My mission from
-          the beginning has been to offer business owners honest pricing,
-          dependable service, and the peace of mind that comes with having their
-          books in expert hands.
+          I’m Kurt Mauer, founder of More Power Electric. My mission from day one has been to provide fair pricing,
+          dependable work, and the peace of mind that comes from knowing your electrical systems are in expert hands.
         </p>
-        <span class="cs-name">[Owner Name]</span>
+        <span class="cs-name">Kurt Mauer</span>
         <span class="cs-job">Founder & CEO</span>
-        <img
-          class="cs-quote-icon"
-          loading="lazy"
-          decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg"
-          alt="quote icon"
-          width="136"
-          height="77"
-        />
+        <img class="cs-quote-icon" loading="lazy" decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="quote icon" width="136"
+          height="77" />
       </div>
     </div>
   </div>
@@ -89,61 +77,56 @@ eleventyNavigation:
         <li class="cs-faq-item active">
           <button class="cs-button">
             <span class="cs-button-text">
-              What bookkeeping services do you provide?
+              What electrical services do you offer?
             </span>
           </button>
           <p class="cs-item-p">
-            We offer complete bookkeeping solutions including transaction
-            recording, bank reconciliation, expense tracking, financial
-            reporting, and tax preparation support.
+            We provide complete electrical solutions including wiring, panel upgrades, lighting installation, system
+            repairs, and safety inspections for homes and businesses.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              Do you handle payroll processing?
+              Do you handle commercial projects?
             </span>
           </button>
           <p class="cs-item-p">
-            Yes. We provide full payroll management, including employee
-            payments, tax withholdings, and compliance with federal and state
-            regulations.
+            Yes. We manage electrical work for offices, retail spaces, warehouses, and other facilities, ensuring
+            compliance with all local and national electrical codes.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              Can you help me set up QuickBooks?
+              Can you help with new construction wiring?
             </span>
           </button>
           <p class="cs-item-p">
-            Absolutely. We set up QuickBooks, customize chart of accounts,
-            integrate payment systems, and train business owners to manage their
-            books efficiently.
+            Absolutely. We design and install wiring systems for new builds, working closely with contractors to ensure
+            efficient layouts and long-lasting performance.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              Do you work with startups and small businesses?
+              Do you work with homeowners and small businesses?
             </span>
           </button>
           <p class="cs-item-p">
-            Yes. We work closely with new and growing businesses, providing
-            affordable accounting solutions and guidance to establish strong
-            financial foundations.
+            Yes. We partner with property owners of all sizes, delivering affordable, high-quality electrical services
+            tailored to their specific needs.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              What makes Halford Bookkeeping different?
+              What makes More Power Electric different?
             </span>
           </button>
           <p class="cs-item-p">
-            We’re committed to accuracy, transparency, and personalized service.
-            Every account is handled by our in-house team, ensuring consistent
-            quality and trusted results.
+            We’re committed to safety, transparency, and expert workmanship. Every project is handled by our skilled
+            in-house electricians for consistent quality and lasting results.
           </p>
         </li>
       </ul>
@@ -168,15 +151,15 @@ eleventyNavigation:
 <section id="cta">
   <div class="container">
     <h2 class="title">
-      Get It Done <br />
+      Power Up <br />
       With Us Today
     </h2>
     <p>
-      Accurate books lead to smarter business decisions. Contact Halford
-      Bookkeeping today and let’s get your finances on track.
+      Quality electrical work means a safer, more efficient property. Contact More Power Electric today and let’s get
+      your project started right.
     </p>
     <a href="/contact/" class="button-solid">Free Consultation</a>
   </div>
-  {% image './src/images/final_home_img.png', 'Halford Bookkeeping workspace',
-  '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920'%}
+  {% image './src/images/final_home_img.png', 'More Power Electric workspace', '', 'lazy', '(max-width: 400px) 400px,
+  (max-width: 850px) 850px, 1920'%}
 </section>
