--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,7 +1,8 @@
 ---
 layout: "base.html"
-description: "Reach out to Halford Bookkeeping for expert financial guidance, service inquiries, and personalized support."
-metaTitle: "Contact Halford Bookkeeping"
+description: "Contact More Power Electric for expert electrical services, residential and commercial wiring, panel
+upgrades, and reliable 24/7 emergency repairs."
+metaTitle: "Contact More Power Electric | Electrical Services & Repairs"
 tagTitle: "Contact"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/contact.css"
@@ -17,9 +18,8 @@ eleventyNavigation:
 
 <section id="int-hero">
   <h1 id="home-h">Contact Us</h1>
-  {% image './src/images/contactbannerimg.png', 'Halford Bookkeeping customer
-  support team', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px)
-  850px, 1920px'%}
+  {% image './src/images/contactbannerimg.png', 'More Power Electric customer support team ready to help with your
+  electrical needs', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
@@ -29,68 +29,37 @@ eleventyNavigation:
 <section id="cs-contact-242">
   <div class="cs-container">
     <div class="cs-content">
-      <span class="cs-topper">Here To Help</span>
+      <span class="cs-topper">Here to Help</span>
       <h2 class="cs-title">Get in Touch</h2>
       <p class="cs-text">
-        Whether you need bookkeeping assistance, payroll solutions, QuickBooks
-        support, or help organizing your business finances, Halford Bookkeeping
-        is ready to assist.
+        Whether you need a quick electrical repair, a full home rewiring, a panel upgrade, or expert advice on your next
+        project, More Power Electric is ready to help. Our licensed electricians provide safe, efficient, and affordable
+        solutions for both residential and commercial clients.
       </p>
     </div>
     <!-- Form -->
     <form id="cs-form-242" name="Contact Form" method="post">
       <label class="cs-label">
         Name
-        <input
-          class="cs-input"
-          required
-          type="text"
-          id="name-242"
-          name="name"
-          placeholder="John/Jane Doe"
-        />
+        <input class="cs-input" required type="text" id="name-242" name="name" placeholder="John/Jane Doe" />
       </label>
       <label class="cs-label">
         Email
-        <input
-          class="cs-input"
-          required
-          type="text"
-          id="email-242"
-          name="email"
-          placeholder="name@company.com"
-        />
+        <input class="cs-input" required type="text" id="email-242" name="email" placeholder="name@company.com" />
       </label>
       <label class="cs-label">
         Phone
-        <input
-          class="cs-input"
-          required
-          type="text"
-          id="phone-242"
-          name="phone"
-          placeholder="+1 (206) 987-6543"
-        />
+        <input class="cs-input" required type="text" id="phone-242" name="phone" placeholder="+1 (206) 987-6543" />
       </label>
       <label class="cs-label">
         How Did You Find Us
-        <input
-          class="cs-input"
-          type="text"
-          id="find-242"
-          name="find-us"
-          placeholder="Social Media, Referral, Search..."
-        />
+        <input class="cs-input" type="text" id="find-242" name="find-us"
+          placeholder="Google, Referral, Social Media..." />
       </label>
       <label class="cs-label cs-label-message">
         Message
-        <textarea
-          class="cs-input cs-textarea"
-          required
-          name="Message"
-          id="message-242"
-          placeholder="Hello, I’m interested in..."
-        ></textarea>
+        <textarea class="cs-input cs-textarea" required name="Message" id="message-242"
+          placeholder="Hello, I’m interested in..."></textarea>
       </label>
       <button class="cs-button-solid cs-submit" type="submit">
         Submit Message
@@ -102,38 +71,22 @@ eleventyNavigation:
       <ul class="cs-ul">
         <li class="cs-li">
           <picture class="cs-icon-wrapper">
-            <img
-              aria-hidden="true"
-              src="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/mail.svg"
-              alt="mail icon"
-              class="cs-icon"
-              width="36"
-              height="36"
-              decoding="async"
-            />
+            <img aria-hidden="true" src="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/mail.svg"
+              alt="mail icon" class="cs-icon" width="36" height="36" decoding="async" />
           </picture>
           <div class="cs-flex-group">
             <span class="cs-header">Email</span>
-            <a href="mailto:halford-bookkeeping@outlook.com" class="cs-link"
-              >halford-bookkeeping@outlook.com</a
-            >
+            <a href="mailto:Morepowerelectricllc@gmail.com" class="cs-link">Morepowerelectricllc@gmail.com</a>
           </div>
         </li>
         <li class="cs-li">
           <picture class="cs-icon-wrapper">
-            <img
-              aria-hidden="true"
-              src="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/phone.svg"
-              alt="phone icon"
-              class="cs-icon"
-              width="36"
-              height="36"
-              decoding="async"
-            />
+            <img aria-hidden="true" src="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/phone.svg"
+              alt="phone icon" class="cs-icon" width="36" height="36" decoding="async" />
           </picture>
           <div class="cs-flex-group">
             <span class="cs-header">Phone</span>
-            Tel: <a href="tel:248-778-8130">(248) 778-8130</a>
+            Tel: <a href="tel:810-459-6302">(810) 459-6302</a>
           </div>
         </li>
       </ul>
@@ -141,16 +94,8 @@ eleventyNavigation:
       <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/images/map.PNG" />
         <source media="(min-width: 601px)" srcset="/images/map.PNG" />
-        <img
-          class="cs-img"
-          aria-hidden="true"
-          loading="lazy"
-          decoding="async"
-          src="/images/map.PNG"
-          alt="Halford Bookkeeping location map"
-          width="462"
-          height="438"
-        />
+        <img class="cs-img" aria-hidden="true" loading="lazy" decoding="async" src="/images/map.PNG"
+          alt="Map showing More Power Electric service location" width="462" height="438" />
       </picture>
     </div>
   </div>
@@ -163,58 +108,40 @@ eleventyNavigation:
 <section id="reviews">
   <div class="cs-container">
     <span class="cs-topper">Client Feedback</span>
-    <h2 class="cs-title">What Our Clients Say</h2>
+    <h2 class="cs-title">What Our Customers Say</h2>
     <p class="cs-text">
-      At Halford Bookkeeping, we’re committed to providing accurate, timely, and
-      personalized financial services. From small businesses to busy
-      entrepreneurs, we’ve helped clients streamline their bookkeeping, improve
-      organization, and save valuable time. Here’s what our clients are saying
-      about their experience.
+      At More Power Electric, we take pride in delivering safe, dependable, and high-quality electrical work. From
+      emergency repairs to major installations, we’ve earned the trust of homeowners and businesses across the area.
+      Here’s what some of our satisfied clients have to say.
     </p>
     <ul class="cs-card-group">
       <!-- Review 1 -->
       <li class="cs-item">
         <p class="cs-item-p">
-          Halford Bookkeeping was incredible to work with! They organized my
-          accounts, explained everything clearly, and gave me peace of mind
-          knowing my books are in order.
+          More Power Electric was fantastic! They fixed my electrical issue quickly, explained everything clearly, and
+          made sure everything was safe before leaving. I highly recommend them.
         </p>
         <span class="cs-reviewer">
           Sarah L.
-          <span class="cs-desc">Small Business Owner</span>
+          <span class="cs-desc">Homeowner</span>
         </span>
-        <img
-          class="cs-item-stars"
-          aria-hidden="true"
-          loading="lazy"
-          decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg"
-          alt="five star review"
-          width="96"
-          height="16"
-        />
+        <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="five star review" width="96"
+          height="16" />
       </li>
       <!-- Review 2 -->
       <li class="cs-item">
         <p class="cs-item-p">
-          I couldn’t be happier with their bookkeeping services. They made the
-          process simple, caught errors I didn’t even know existed, and saved me
-          hours each month. Highly recommended.
+          I couldn’t be happier with their service. They replaced my old panel, brought everything up to code, and left
+          the workspace spotless. Professional, friendly, and efficient!
         </p>
         <span class="cs-reviewer">
           James P.
-          <span class="cs-desc">Freelancer</span>
+          <span class="cs-desc">Business Owner</span>
         </span>
-        <img
-          class="cs-item-stars"
-          aria-hidden="true"
-          loading="lazy"
-          decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg"
-          alt="five star review"
-          width="96"
-          height="16"
-        />
+        <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="five star review" width="96"
+          height="16" />
       </li>
     </ul>
   </div>
