--- a/src/pages/servicepages/electrical-installations.html
+++ b/src/pages/servicepages/electrical-installations.html
@@ -1,16 +1,16 @@
 ---
 layout: "base.html"
-description: "Expert Financial Cleanup Services for Small Businesses and Professionals"
-metaTitle: "Halford Bookkeeping - Financial Cleanup"
-tagTitle: "Financial Cleanup"
-title: "Financial Cleanup"
+description: "Professional Residential and Commercial Electrical Installation Services in Michigan"
+metaTitle: "More Power Electric"
+tagTitle: "Residential & Commercial Electrical Installations"
+title: "Residential & Commercial Electrical Installations"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/services.css"
-permalink: "/financial-clean-up/"
+permalink: "/electrical-installations/"
 eleventyNavigation:
-  key: FinancialCleanup
+  key: Electrical Installations
   parent: Services
-  order: 800
+  order: 700
 ---
 
 <!-- ============================================ -->
@@ -18,14 +18,14 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-  <h1 id="home-h">Financial Cleanup</h1>
+  <h1 id="home-h">Residential & Commercial Electrical Installations</h1>
   <picture class="cs-background">
-    <source media="(max-width: 600px)" srcset="/images/financial_banner.png" />
-    <source media="(min-width: 601px)" srcset="/images/financial_banner.png" />
+    <source media="(max-width: 600px)" srcset="/images/bookkeeping_banner.png" />
+    <source media="(min-width: 601px)" srcset="/images/bookkeeping_banner.png" />
     <img
       decoding="async"
-      src="/images/financial_banner.png"
-      alt="financial cleanup services banner"
+      src="/images/bookkeeping_banner.png"
+      alt="electrical installation banner"
       width="1280"
       height="568"
       aria-hidden="true"
@@ -42,13 +42,13 @@ eleventyNavigation:
     <div class="cs-image-group">
       <div class="cs-flex">
         <picture class="cs-background">
-          <source media="(max-width: 600px)" srcset="/images/financial_0.png" />
-          <source media="(min-width: 601px)" srcset="/images/financial_0.png" />
+          <source media="(max-width: 600px)" srcset="/images/bookkeeping_0.png" />
+          <source media="(min-width: 601px)" srcset="/images/bookkeeping_0.png" />
           <img
             loading="lazy"
             decoding="async"
-            src="/images/financial_0.png"
-            alt="professional financial cleanup"
+            src="/images/bookkeeping_0.png"
+            alt="professional electrical installation"
             width="542"
             height="728"
           />
@@ -63,7 +63,7 @@ eleventyNavigation:
             width="60"
             height="60"
           />
-          <span class="cs-desc">Skilled Bookkeeping Experts</span>
+          <span class="cs-desc">Experienced Electrical Experts</span>
         </div>
       </div>
       <ul class="cs-card-group">
@@ -79,11 +79,11 @@ eleventyNavigation:
               width="32"
               height="32"
             />
-            Catch-Up Bookkeeping
+            Residential Installations
           </h3>
           <p class="cs-item-text">
-            Get your books up to date with our thorough catch-up bookkeeping
-            services. Perfect for businesses that have fallen behind.
+            Safe, code-compliant electrical wiring, lighting, and outlet installations 
+            for new homes, renovations, and upgrades.
           </p>
         </li>
         <li class="cs-item">
@@ -98,58 +98,53 @@ eleventyNavigation:
               width="32"
               height="32"
             />
-            Error Correction & Reconciliation
+            Commercial & Industrial Projects
           </h3>
           <p class="cs-item-text">
-            Identify and fix transaction errors, reconcile accounts, and ensure
-            your financial records are accurate and compliant.
+            Expert installation for offices, warehouses, and industrial facilities 
+            to ensure reliable, efficient, and long-lasting electrical systems.
           </p>
         </li>
       </ul>
     </div>
     <div class="cs-content">
       <hr />
-      <br />
-      <br />
-
+      <br /><br />
       <h1 class="cs-title">
-        Financial Cleanup by
-        <span class="cs-color">Halford Bookkeeping</span>
+        Professional Electrical Installations by
+        <span class="cs-color">More Power Electric</span>
       </h1>
-
       <br />
-      <h3>Bring Order to Your Business Finances</h3>
+      <h3>Powering Michigan Homes and Businesses with Precision</h3>
       <br />
       <p>
-        At Halford Bookkeeping, we help businesses regain control over their
-        finances with comprehensive financial cleanup services. From correcting
-        past mistakes to organizing outdated records, our team ensures your
-        books are accurate, organized, and ready for decision-making or tax
-        filing.
+        At More Power Electric, we specialize in high-quality electrical installation 
+        services for residential, commercial, and industrial clients across Michigan. 
+        From wiring and panel upgrades to custom lighting and standby power systems, 
+        we ensure every project meets the highest safety and performance standards.
       </p>
       <p>
-        Whether you’re behind on months of bookkeeping or need to prepare clean
-        records for investors, lenders, or the IRS, we’ll help you get back on
-        track quickly and efficiently.
+        Whether you’re building a new property, upgrading an existing one, or expanding 
+        your facilities, our skilled electricians deliver dependable solutions tailored 
+        to your needs.
       </p>
       <br />
       <hr />
       <br />
-
       <div class="desktop-only">
-        <h3>Our Financial Cleanup Process</h3>
+        <h3>Our Installation Process</h3>
         <ol>
-          <li>Review of existing financial records</li>
-          <li>Identification of missing or inaccurate entries</li>
-          <li>Reconciliation of bank and credit card accounts</li>
-          <li>Final review to ensure accuracy and compliance</li>
+          <li>Initial consultation and project assessment</li>
+          <li>Detailed planning and material sourcing</li>
+          <li>Professional installation with safety inspections</li>
+          <li>Final testing and customer walkthrough</li>
         </ol>
-        <h4>Why Choose Our Cleanup Services?</h4>
+        <h4>Why Choose More Power Electric?</h4>
         <ul>
-          <li>Experienced, detail-oriented bookkeeping team</li>
-          <li>Quick turnaround for overdue records</li>
-          <li>Compliance-focused approach to prevent future errors</li>
-          <li>Confidential and secure handling of financial data</li>
+          <li>Licensed and experienced electricians</li>
+          <li>Compliance with all local and national codes</li>
+          <li>Custom solutions for residential, commercial, and industrial needs</li>
+          <li>Commitment to safety, efficiency, and customer satisfaction</li>
         </ul>
       </div>
     </div>
@@ -164,28 +159,28 @@ eleventyNavigation:
 <section id="services-563">
   <div class="cs-container">
     <picture class="cs-picture">
-      <source media="(max-width: 600px)" srcset="/images/financial_1.png" />
-      <source media="(min-width: 601px)" srcset="/images/financial_1.png" />
+      <source media="(max-width: 600px)" srcset="/images/bookkeeping_1.png" />
+      <source media="(min-width: 601px)" srcset="/images/bookkeeping_1.png" />
       <img
         loading="lazy"
         decoding="async"
-        src="/images/financial_1.png"
-        alt="financial cleanup service"
+        src="/images/bookkeeping_1.png"
+        alt="electrical services"
         width="630"
         height="528"
         aria-hidden="true"
       />
     </picture>
     <div class="cs-content">
-      <span class="cs-topper">Clean, Accurate, and Reliable</span>
+      <span class="cs-topper">Power You Can Trust</span>
       <br />
       <h3 class="cs-h3">
-        Professional
-        <span class="cs-color">Financial Cleanup Services</span>
+        Expert
+        <span class="cs-color">Electrical Installation Solutions</span>
       </h3>
       <p class="cs-text">
-        We bring clarity to your financial records so you can make confident,
-        informed business decisions.
+        From small home projects to large-scale commercial installations, we provide 
+        safe, efficient, and reliable electrical services that keep your property powered.
       </p>
       <ul class="cs-ul">
         <li class="cs-li">
@@ -199,7 +194,7 @@ eleventyNavigation:
             width="16"
             height="18"
           />
-          Complete review and organization of past records
+          Wiring and panel upgrades
         </li>
         <li class="cs-li">
           <img
@@ -212,7 +207,7 @@ eleventyNavigation:
             width="16"
             height="18"
           />
-          Error correction and account reconciliation
+          Interior and exterior lighting installations
         </li>
         <li class="cs-li">
           <img
@@ -225,12 +220,10 @@ eleventyNavigation:
             width="16"
             height="18"
           />
-          Preparation for audits, tax filing, or business reporting
+          Standby generator installation
         </li>
       </ul>
-      <a href="/contact" class="cs-button-solid"
-        >Get a Financial Cleanup Quote</a
-      >
+      <a href="/contact" class="cs-button-solid">Get an Installation Quote</a>
     </div>
   </div>
 </section>
@@ -243,60 +236,57 @@ eleventyNavigation:
   <div class="cs-container">
     <div class="cs-content">
       <span class="cs-topper">FAQs</span>
-      <h2 class="cs-title">Financial Cleanup FAQs</h2>
+      <h2 class="cs-title">Electrical Installation FAQs</h2>
       <p class="cs-text">
-        Find answers to common questions about our financial cleanup services.
-        For more details, reach out to our team.
+        Find answers to common questions about our electrical installation 
+        services. For personalized advice, contact our team.
       </p>
     </div>
     <div class="cs-flex-group">
       <ul class="cs-faq-group">
         <li class="cs-faq-item active">
-          <button class="cs-button">What is financial cleanup?</button>
-          <p class="cs-item-p">
-            Financial cleanup is the process of reviewing, correcting, and
-            organizing your business’s financial records to ensure accuracy and
-            compliance.
-          </p>
-        </li>
-        <li class="cs-faq-item">
-          <button class="cs-button">How long does it take?</button>
-          <p class="cs-item-p">
-            The time frame depends on the volume of records and level of
-            disorganization, but most cleanups are completed within 1–3 weeks.
-          </p>
-        </li>
-        <li class="cs-faq-item">
           <button class="cs-button">
-            Can you fix past errors in my books?
+            What types of electrical installations do you offer?
           </button>
           <p class="cs-item-p">
-            Yes. We identify and correct errors, reconcile accounts, and ensure
-            your records are accurate moving forward.
+            We provide residential, commercial, and industrial electrical 
+            installations, including wiring, lighting, and standby power systems.
           </p>
         </li>
         <li class="cs-faq-item">
-          <button class="cs-button">Is this service confidential?</button>
+          <button class="cs-button">Do you handle both new builds and renovations?</button>
           <p class="cs-item-p">
-            Absolutely. We take your privacy seriously and securely handle all
-            financial data.
+            Yes. We work on new construction projects as well as upgrades 
+            and renovations for existing properties.
           </p>
         </li>
         <li class="cs-faq-item">
-          <button class="cs-button">
-            Do you work with QuickBooks or other software?
-          </button>
+          <button class="cs-button">Are your electricians licensed?</button>
           <p class="cs-item-p">
-            Yes. We work with QuickBooks, Xero, Wave, and other accounting
-            software to update and organize your records.
+            Absolutely. All our electricians are licensed, insured, and 
+            trained to meet local and national electrical codes.
+          </p>
+        </li>
+        <li class="cs-faq-item">
+          <button class="cs-button">Do you offer emergency installation services?</button>
+          <p class="cs-item-p">
+            We provide prompt service for urgent electrical needs to keep 
+            your home or business running safely.
+          </p>
+        </li>
+        <li class="cs-faq-item">
+          <button class="cs-button">Can you help design my electrical layout?</button>
+          <p class="cs-item-p">
+            Yes. We offer expert advice and planning to ensure your 
+            electrical system is efficient, safe, and future-ready.
           </p>
         </li>
       </ul>
       <div class="cs-cta">
-        <h3 class="cs-h3">Need Help Cleaning Up Your Books?</h3>
+        <h3 class="cs-h3">Need Reliable Electrical Installations?</h3>
         <p class="cs-cta-p">
-          Our bookkeeping specialists can restore order to your financial
-          records quickly and efficiently.
+          Our skilled electricians are ready to power your project with 
+          safe, efficient, and dependable solutions.
         </p>
         <a href="/contact" class="cs-button-solid">Contact Us</a>
       </div>
